Firts Commit 04_Elemen04_Elemento_Contr_UI5

--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -1,3 +1,13 @@
-title=Title
-appTitle=MainView
-appDescription=App Description
+title=Employees
+appTitle=Employees
+appDescription=Employees
+
+# labels
+labelEmployee=Employee
+labelCountry=Country
+
+#Country Keys
+CountryUS=United States
+CountryUK=United Kingdom
+CountryCO=Colombia
+CountryES=Spain
