Firts Commit Modelos y Eventos

--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@ appTitle=Employees
 appDescription=Employees
 
 # labels
-labelEmployee=Employee
+labelEmployee=Employee Id
 labelCountry=Country
 
 #Country Keys
@@ -11,3 +11,15 @@ CountryUS=United States
 CountryUK=United Kingdom
 CountryCO=Colombia
 CountryES=Spain
+
+#Table labels
+tableId=Employee Id
+tableName=Name
+tableCountry=Country
+tableCity=City
+
+#Label Buttons
+btnFilter=Filter
+btnClearFilter=Clear Filter
+
+
