Firts Commit 05_Binding_Formatter

--- a/Employees/webapp/i18n/i18n.properties
+++ b/Employees/webapp/i18n/i18n.properties
@@ -17,9 +17,46 @@ tableId=Employee Id
 tableName=Name
 tableCountry=Country
 tableCity=City
+tableShowDetails=Show Details
 
 #Label Buttons
 btnFilter=Filter
 btnClearFilter=Clear Filter
+showCity=Show City
+hideCity=Hide City
 
+#Table Orders
+orderID=Order Id
+freight=Freight
+shipAddress=Ship Address
+
+#Dialog Orders
+orders=Orders
+close=Close
+
+#Layouts
+layout=Layout
+employeeDetails=Employee Details
+
+#Employee Details
+employeeID=Employee ID
+titleEmployee=Title
+countryCode=Country Code
+city=City
+postalCode=Postal Code
+
+#Incidence
+incidence=Incidence
+europe=Europe
+us=United States
+createIncidence=Create Incidence
+incidenceDate=Date
+incidenceReason=Reason
+incidenceType=Type
+incidenceCorrect=Correct
+incidencePending=Pending
+incidenceError=Error
+today=Today
+tomorrow=Tomorrow
+yesterday=Yesterday
 
